# Hydrogen

./: .gitignore  CMakeLists.txt
games/example/: CMakeLists.txt  README.md
games/example/src/: main.c
lib/: CMakeLists.txt
lib/include/hydrogen/: constants.h  hydrogen.h
lib/include/hydrogen/graphics/: graphics.h  window.h
lib/src/: hydrogen.c
